--- a/responzivnost/style1.css
+++ b/responzivnost/style1.css
@@ -13,52 +13,61 @@ body, html {
 .nav {
     width: 100%;
     height: 50px;
-    display: flex
+    display: flex;
 }
 
-.left {
+.leftNav {
     width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
-    padding-left: 20px;
 }
 
-.right {
-    width: 100%;
-    height: 50%;
-    display: flex;
-    justify-content: end;
-}
-
-.right span {
-    padding: 10px 20px;
-    color: gray;
-}
-
-.header {
-    width: 100%;
-    height: 300px;
-    display: flex;
-}
-
-.left {
+.rightNav {
     width: 50%;
     height: 100%;
     display: flex;
-    flex-direction: column;
-    padding-left: 20px;
-    line-height: 30px;
+    align-items: center;
+    justify-content: end;
 }
 
-.btncontainer {
-    translate: -105px 20px;
-    gap: 20px;
+.rightNav span {
+    color: gray;
+    padding: 0 20px;
 }
 
-.btncontainer button {
+
+.dropdown {
+    width: 300px;
+    height: 200px;
+    display: none;
+    position: fixed;
+    position: absolute;
+    top: 40px;
+    right: 10px;
+}
+
+.burgerIcon {
+    font-size: 30px;
+    display: none;
+}
+
+.header {
+    margin-top: 40px;
+    width: 100%;
+    height: 400px;
+    display: flex;
+}
+
+.leftHead {
+    width: 50%;
+    height: 100%;   
+    text-align: left;
+    padding-left: 30px;
+}
+
+.leftHead button {
     padding: 10px;
-    border: 10px;
 }
 
 .rightHead {
@@ -73,73 +82,170 @@ body, html {
 
 .about {
     width: 100%;
-    height: 300px;
+    height: 400px;
     display: flex;
-    position: relative;
-    margin-top: 50px;
-}
-
-.rightAbout {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    right: 0;
-    text-align: center;
 }
 
 .leftAbout {
     width: 50%;
     height: 100%;
-    position: absolute;
-    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .leftAbout img {
-    width: 100%;
-    height: 100%;
+    width: 400px;
+    height: 400px;
 }
 
-@media only screen and (max-width: 480px){
-  
+.rightAbout {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.rightAbout span {
+    width: 500px;
+}
+
+.footer {
+    width: 100%;
+    height: 500px;
+    text-align: center;
+}
+
+.row {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: center;
+    gap: 70px;
+}
+
+.card {
+    width: 300px;
+    height: 400px;
+}
+
+.headerCard {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.bodyCard {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 450px){
     .main {
-        height: 200%;
-    }
-
-
-    .nav {
-        width: 480px;
-        position: relative;
+        width: 450px;
+        min-height: 100vh;
     }
     
-    .right {
-        position: absolute;
-        left: 0;
+    .spanNav {
+        display: none;
     }
 
-    .leftnav {
+    .burgerIcon {
+        display: inline-block;
+    }
+
+    .burgerIcon:hover .dropdown{
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        box-shadow: 5px 10px 8px gray;
+    }
+
+    .leftHead span {
         display: none;
+    }
+
+    .leftHead button {
+        translate: 0 -50px;
     }
 
     .header {
         display: flex;
         flex-direction: column;
-        text-align: center;
     }
 
-    .left h1 {
-        translate: 20px;
+    .rightHead img {
+        margin-top: 50px;
+        width: 400px;
+        height: 400px;
     }
-
+    
     .about {
         display: flex;
         flex-direction: column;
-        position: relative;
+    }
+
+    .rightAbout {
+        text-align: left;
+        translate: -30px;
+        width: 300px;
+    }
+
+    .footer {
+        margin-top: 100px;
+        display: flex;
+        flex-direction: column;
+        translate: 50px 200px;
+    }
+
+    .footer span {
+        margin-top: -100px;
+        translate: -50px -200px;
+    }
+
+    .row {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .card {
+        translate: 0 500px;
+    }
+
+    .card-top {
+        translate: 0 700px;
+    }
+
+    .card-bottom {
+        translate: 0 300px;
+    }
+
+    .footer h3 {
+        translate: -80px 200px;
+    }
+
+    .about {
+        margin-top: 100px;
     }
 
     .leftAbout {
-        position: absolute;
+        translate: 60px 500px;
+    }
 
+    .rightAbout {
+        translate: 0 -180px;
+    }
+
+    .rightAbout h3 {
+        translate: -80px;
+    }
+
+    .rightAbout span {
+        translate: 20px;
+        width: 300px;
     }
 }
